--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/font-nanum/1.0/nanummyeongjo/nanummyeongjo.css");
+@import url("https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext");
 
 @mixin flexbox-center {
     display: flex;
@@ -22,16 +23,20 @@ $font-size: 5.5rem;
 $dimen-margin: 1.25;
 $dimen-container: $font-size * $dimen-margin * 5;
 
-@mixin han-font {
-    font-weight: 200;
-    font-size: $font-size;
-    line-height: $font-size * $dimen-margin;
-    font-family: 'Nanum Myeongjo', serif;
+@mixin blurry-font {
     color: transparent;
     text-shadow: 0 0 0.125rem rgba(255, 255, 255, 0.0625);
     text-rendering: geometricPrecision;
     -webkit-font-smoothing: antialiased !important;
     -moz-osx-font-smoothing: grayscale;
+}
+
+@mixin han-font($font-size, $dimen-margin) {
+    font-weight: 200;
+    font-size: $font-size;
+    line-height: $font-size * $dimen-margin;
+    font-family: 'Nanum Myeongjo', serif;
+    @include blurry-font;
 }
 
 @mixin body-size {
@@ -50,13 +55,20 @@ html, body {
     padding: 0;
 }
 
-.clock-outer {
+.hide {
+    opacity: 0;
+}
+
+body {
     transition: opacity 3s cubic-bezier(.76,.01,.83,.67);
+}
+
+.clock-outer {
     @include body-size;
     flex-wrap: wrap;
 
     .han {
-        @include han-font;
+        @include han-font($font-size, $dimen-margin);
         flex: 1 0 20%;
         transition: text-shadow 2s ease;
     }
@@ -68,4 +80,33 @@ html, body {
     .han.on {
         text-shadow: 0 0 0.125rem white;
     }
+}
+
+
+$dimen-logo-width: (400px / 4);
+$dimen-logo-height: (235px / 4);
+
+.profile {
+    opacity: 0.9;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    text-decoration: none;
+    display: inline-block;
+    position: absolute;
+    right: $dimen-logo-width + 10px;
+    bottom: 3px;
+    line-height: 1em;
+    letter-spacing: 0.1em;
+}
+
+#logo {
+    position: absolute;
+    opacity: 0.8;
+    bottom: 40px;
+    right: 40px;
+    width: $dimen-logo-width;
+    height: $dimen-logo-height;
+    background: url(logo.png) no-repeat;
+    background-size: contain;
 }
